--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 # Copy this file to .env and fill in your API keys and preferences
 
 # Gemini AI Configuration
-GEMINI_API_KEY=AIzaSyDiAYAKJqqt_nLa2pXkuHGgrrrTxdKSrds
+GEMINI_API_KEY="your_api_key_here"
 GEMINI_MODEL=gemini-1.5-flash
 GEMINI_TEMPERATURE=0.7
 GEMINI_MAX_TOKENS=20480
